# knative-serverless-talk

./: .gitignore  1-ksvc.sh  2-source-factorial-channel.yaml  3-factorial-logger-channel.yaml  4-event-logger-sub.yaml  5-factorial-sub.yaml  6-kafka-source.yaml  README.md  enable-logging.sh  setup-kind.sh  setup.sh  test.sh
rust-factorial-function/: Cargo.toml  Dockerfile  README.md
rust-factorial-function/src/: main.rs
